[tool.poetry]
name = "fullstack-multi-agent-llm-app-with-crewai"
version = "0.1.0"
description = ""
authors = ["adeways2000 <adeways2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
